# internal/pkg/model/comment.go
@@ -7,3 +7,21 @@ type Comment struct {
 	ParentID  uint64 `db:"parent_id"`
 	Text      string `db:"text"`
 }
+
+type CommentVote struct {
+	ID        uint64 `db:"id"`
+	CommentID uint64 `db:"comment_id"`
+	AuthorID  uint64 `db:"author_id"`
+	PostID    uint64 `db:"post_id"`
+	Vote      bool   `db:"vote"`
+}
+
+type ExtendedComment struct {
+	ID           uint64 `db:"id"`
+	AuthorID     uint64 `db:"author_id"`
+	PostID       uint64 `db:"post_id"`
+	ParentID     uint64 `db:"parent_id"`
+	Text         string `db:"text"`
+	LikeCount    uint64 `db:"like_count"`
+	DislikeCount uint64 `db:"dislike_count"`
+}
